fix: Add container pro QZV

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,6 +5,7 @@ profiles {
     process {
       withName: 'IMPORT' { container = 'quay.io/qiime2/core:2023.9' }
       withName: 'DADA2'  { container = 'quay.io/qiime2/core:2023.9' }
+      withName: 'QZV'  { container = 'quay.io/qiime2/core:2023.9' }
     }
   }
 }
